--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </ul><br> 
 	<p> CRISPR represents a paradigm shift in human health, enabling breakthroughs once thought impossible. By addressing genetic disorders, combating infectious diseases, and pioneering personalized medicine, it challenges traditional medical approaches and fosters a future of unprecedented possibilities. As technical and ethical challenges are resolved, CRISPR is poised to redefine the boundaries of healthcare. </p> <br>
     
-    <img src="https://placehold.co/600x400">
+    <img src="Info.png">
           </div>
           
         </div>
