--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-    <link rel="stylesheet" href="main.css"/>
+        <link rel="stylesheet" href="main.css"/>
     </head>
     <body>
-        <h1> How CRISPR Technology Helps Shape the Future of Human Health
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+
+        </nav>
+        <h1> 
+            <span class="crispr-text"> How CRISPR </span> <br>
+            <span class="Technology-text"> Technology </span> <br> 
+            Helps Shape the Future of <br> Human Health
         </h1>
     </body>
 </html>
