Website main page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
         <link rel="stylesheet" href="main.css"/>
+        <meta charset="UTF-8">
     </head>
     <body>
         <nav>
@@ -12,7 +14,33 @@
         <h1> 
             <span class="crispr-text"> How CRISPR </span> <br>
             <span class="Technology-text"> Technology </span> <br> 
-            Helps Shape the Future of <br> Human Health
+            <span class="Helps-text"> Helps Shape the Future <br> of Human Health </span>
         </h1>
+        <div class="Disruptive-Tech">
+            <p class="first-paragraph">
+                <b>Disruptive technologies </b> don’t just improve existing systems—they revolutionize them. One of the most groundbreaking innovations of our time is <b>CRISPR (Clustered Regularly Interspaced Short Palindromic Repeats), </b> a technology that has completely redefined genetic engineering. With its precision, efficiency, and affordability, CRISPR has rendered traditional gene-editing methods obsolete, offering an unprecedented ability to manipulate DNA with remarkable ease. <br>
+            </p>
+            <p class="second-paragraph">
+                Unlike older, more complex techniques like TALENs or zinc finger nucleases—which required intricate protein engineering—CRISPR uses a simple RNA-guided system that’s faster, cheaper, and more adaptable. In fact, CRISPR experiments can be designed and executed in a matter of weeks, at a fraction of the cost of previous methods. This has democratized genetic research, empowering scientists and medical professionals to make discoveries and advances at an astonishing pace. <br> 
+            </p>
+            
+            <p class="third-paragraph">
+                But the real game-changer? CRISPR’s potential to revolutionize healthcare. From addressing previously untreatable diseases to reshaping the future of medical treatments, CRISPR promises to deliver breakthroughs that could transform lives. With its accessibility and speed, it’s no wonder CRISPR is heralded as a technology poised to reshape not just science, but the very fabric of medicine itself. <br>
+            </p>
+            <p class="fourth-paragraph">
+                In short, CRISPR isn't just a tool for gene editing—it's a disruptive force, pushing the boundaries of what's possible in biotechnology and beyond. <br>
+            </p>
+        </div>
+        <p class="Title"> 
+            The Science Behind the Breakthrough
+        </p>
+        <div class="container">
+            <div class="box"> <b>DNA Modification in Living Organisms: </b> <br> CRISPR allows scientists to make precise changes to the DNA of living organisms, unlocking new possibilities in genetics and biotechnology.</div>
+            <div class="box"> <b> How It Works: </b> <br> When bacteria are infected by viruses, they capture small fragments of the virus's DNA and store them in their own genetic code in a unique pattern called CRISPR arrays.</div>
+            <div class="box"> <b> Immune Memory: </b> <br> These CRISPR arrays act as a biological "memory bank," allowing the bacteria to recognize viruses (or closely related ones) if they attack again in the future.</div>
+            <div class="box"> <b>Defensive Mechanism: </b> <br> When the virus reappears, the bacteria generate RNA segments from the CRISPR arrays that target and bind to specific sections of the virus’s DNA.
+            </div>
+            <div class="box"> <b> DNA Cutting: </b> <br> The bacteria then deploy an enzyme, like Cas9, to cut the viral DNA apart, effectively neutralizing the threat and preventing the virus from reproducing.</div>
+        </div>
     </body>
 </html>
