--- a/index.html
+++ b/index.html
@@ -31,16 +31,19 @@
                 In short, CRISPR isn't just a tool for gene editing—it's a disruptive force, pushing the boundaries of what's possible in biotechnology and beyond. <br>
             </p>
         </div>
-        <p class="Title"> 
-            The Science Behind the Breakthrough
-        </p>
-        <div class="container">
-            <div class="box"> <b>DNA Modification in Living Organisms: </b> <br> CRISPR allows scientists to make precise changes to the DNA of living organisms, unlocking new possibilities in genetics and biotechnology.</div>
-            <div class="box"> <b> How It Works: </b> <br> When bacteria are infected by viruses, they capture small fragments of the virus's DNA and store them in their own genetic code in a unique pattern called CRISPR arrays.</div>
-            <div class="box"> <b> Immune Memory: </b> <br> These CRISPR arrays act as a biological "memory bank," allowing the bacteria to recognize viruses (or closely related ones) if they attack again in the future.</div>
-            <div class="box"> <b>Defensive Mechanism: </b> <br> When the virus reappears, the bacteria generate RNA segments from the CRISPR arrays that target and bind to specific sections of the virus’s DNA.
-            </div>
-            <div class="box"> <b> DNA Cutting: </b> <br> The bacteria then deploy an enzyme, like Cas9, to cut the viral DNA apart, effectively neutralizing the threat and preventing the virus from reproducing.</div>
+        <div class="The-science">
+            <p class="Title"> 
+                The Science Behind the Breakthrough
+            </p>
+                <div class="container">
+                    <div class="box"> <b>DNA Modification in Living Organisms: </b> CRISPR allows scientists to make precise changes to the DNA of living organisms, unlocking new possibilities in genetics and biotechnology.</div>
+                    <div class="box"> <b> How It Works: </b>When bacteria are infected by viruses, they capture small fragments of the virus's DNA and store them in their own genetic code in a unique pattern called CRISPR arrays.</div>
+                    <div class="box"> <b> Immune Memory: </b> These CRISPR arrays act as a biological "memory bank," allowing the bacteria to recognize viruses (or closely related ones) if they attack again in the future.</div>
+                    <div class="box"> <b>Defensive Mechanism: </b> When the virus reappears, the bacteria generate RNA segments from the CRISPR arrays that target and bind to specific sections of the virus’s DNA.
+                    </div>
+                    <div class="box"> <b> DNA Cutting: </b> The bacteria then deploy an enzyme, like Cas9, to cut the viral DNA apart, effectively neutralizing the threat and preventing the virus from reproducing.
+                    </div>
+                </div>
         </div>
     </body>
 </html>
