--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
                 </div>
         </div>
         <div class="timeline-container">
-            <h2 class="timeline-title">Timeline of CRISPR</h2>
-        </div>        
+            <h2 class="timeline-title">CRISPR <br> Timeline </h2>
+        </div>      
+        <div class="Timeline-content">
+            <p class="content">
+                content
+            </p>
+        </div> 
     </body>
 </html>
