--- a/index.html
+++ b/index.html
@@ -45,13 +45,124 @@
                     </div>
                 </div>
         </div>
-        <div class="timeline-container">
-            <h2 class="timeline-title">CRISPR <br> Timeline </h2>
-        </div>      
-        <div class="Timeline-content">
-            <p class="content">
-                content
-            </p>
-        </div> 
+        <div class="timeline-content">
+            <h2 class="timeline-title">
+                CRISPR Timeline
+            </h2>
+            <h3 class="Year">1987-2021</h3>
+        </div>            
+           <div class="timeline-container">
+        <div class="timeline">
+            <div class="event">
+                <div class="circle"></div>
+                <div class="content">
+                    <h3>1987</h3>
+                    <p>First discovery of clustered Regularly Interspaced Short Palindromic Repeats (CRISPR) in E. coli</p>
+                </div>
+            </div>
+            <div class="event">
+                <div class="circle"></div>
+                <div class="content">
+                    <h3>1993</h3>
+                    <p>Similar DNA fragments were found in Haloarcula and Haloferax archaea</p>
+                </div>
+            </div>
+            <div class="event">
+                <div class="circle"></div>
+                <div class="content">
+                    <h3>2000</h3>
+                    <p>The identification of homologous CRISPR fragments in twenty microbial species</p>
+                </div>
+            </div>
+            <div class="event">
+                <div class="circle"></div>
+                <div class="content">
+                    <h3>2005</h3>
+                    <p>The discovery of broader existence of CRISPR foreign viral DNA in CRISPR spacers</p>
+                </div>
+            </div>
+            <div class="event">
+                <div class="circle"></div>
+                <div class="content">
+                    <h3>2007</h3>
+                    <p>The functions of CRISPR were evidenced in lab</p>
+                </div>
+            </div>
+            <div class="event">
+                <div class="circle"></div>
+                <div class="content">
+                    <h3>2013</h3>
+                    <p>CRISPR was engineered as a gene-editing tool</p>
+                </div>
+            </div>
+            <div class="event">
+                <div class="circle"></div>
+                <div class="content">
+                    <h3>2016</h3>
+                    <p>The first application of CRISPR/Cas9 in clinical treatment</p>
+                </div>
+            </div>
+            <div class="event">
+                <div class="circle"></div>
+                <div class="content">
+                    <h3>2019</h3>
+                    <p>CRISPR/Cas9-based HIV1 infection treatment was reported</p>
+                </div>
+            </div>
+            <div class="event">
+                <div class="circle"></div>
+                <div class="content">
+                    <h3>2020</h3>
+                    <p>Emmanuelle Charpentier and Jennifer Doudna were awarded the Nobel Prize, and cancer clinical therapy by Cas9-edited T-cells was reported</p>
+                </div>
+            </div>
+            <div class="event">
+                <div class="circle"></div>
+                <div class="content">
+                    <h3>2021</h3>
+                    <p>The clinical treatment of SCD and B-Thalassemia was reported</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <section class="crispr-applications">
+        <div class="container">
+            <h2 class="section-title">Applications of CRISPR in Human Health</h2>
+            <div class="application">
+                <h3 class="application-title">
+                    <span>a.</span> Treating Genetic Disorders
+                </h3>
+                <p class="application-description">
+                    CRISPR has shown immense promise in correcting genetic defects. For example:
+                </p>
+                <ul class="examples">
+                    <li>
+                        <strong>Sickle Cell Anemia:</strong> CRISPR is used to reactivate fetal hemoglobin production, alleviating disease symptoms. In one landmark case, Victoria Gray became the first U.S. patient to benefit from CRISPR-based treatment, showcasing its life-changing potential.
+                    </li>
+                    <li>
+                        <strong>Hereditary Amyloidosis:</strong> CRISPR trials aim to silence faulty genes, preventing harmful protein buildup in the liver.
+                    </li>
+                </ul>
+            </div>
+    
+            <div class="application">
+                <h3 class="application-title">
+                    <span>b.</span> Tackling Infectious Diseases
+                </h3>
+                <p class="application-description">
+                    CRISPR-based bacteriophage therapies target antibiotic-resistant bacteria, a critical global health challenge. These therapies modify viruses to deliver CRISPR components directly to bacteria, destroying their genetic material.
+                </p>
+            </div>
+    
+            <div class="application">
+                <h3 class="application-title">
+                    <span>c.</span> Expanding Treatment Possibilities
+                </h3>
+                <p class="application-description">
+                    Ongoing advancements in <i>in vivo</i> editing could make treatments less invasive and more accessible by allowing direct gene editing within the body, bypassing complex lab procedures.
+                </p>
+            </div>
+        </div>
+    </section>    
     </body>
 </html>
