--- a/index.html
+++ b/index.html
@@ -127,7 +127,10 @@
     </div>
     <section class="crispr-applications">
         <div class="container">
-            <h2 class="section-title">Applications of CRISPR in Human Health</h2>
+            <h2>
+            <span class="section-title">Applications of CRISPR </span><br>
+            <span class="sub-title">in Human Health</span>
+            </h2>
             <div class="application">
                 <h3 class="application-title">
                     <span>a.</span> Treating Genetic Disorders
