--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
 
         </nav>
         <!-- Home Section -->
-    <section id="home">
+    <section id="home" class="content-section">
         <h1> 
             <span class="crispr-text"> How CRISPR </span> <br>
             <span class="Technology-text"> Technology </span> <br> 
@@ -41,7 +41,7 @@
                 In short, CRISPR isn't just a tool for gene editing—it's a disruptive force, pushing the boundaries of what's possible in biotechnology and beyond. <br>
             </p>
         </div>
-        </section>
+    </section>
         
          <!-- The Science Behind CRISPR -->
     <section id="science" class="content-section">
