--- a/index2.html
+++ b/index2.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
+            <a href="#home">Home</a>
+            <a href="#home">About</a>
             <a href="#science">Science</a>
             <a href="#timeline">Timeline</a>
             <a href="#applications">Applications</a>
