--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
     <body>
         <nav>
             <a href="#home">Home</a>
-            <a href="#home">About</a>
+            <a href="#about">About</a>
             <a href="#science">Science</a>
             <a href="#timeline">Timeline</a>
             <a href="#applications">Applications</a>
