--- a/index2.html
+++ b/index2.html
@@ -240,6 +240,9 @@
                         <p>
                             Personalized CRISPR therapies could tailor treatments to individual genetic profiles, marking a new era in medicine.
                         </p>
+                     <div class="image"> 
+                         <img src=info.png">
+                         </div> 
                     </div>
                 </div>
             </div>
