--- a/index2.html
+++ b/index2.html
@@ -221,7 +221,7 @@
                     <p>
                         As we explore CRISPR technology further, its applications are expanding into areas that were once unimaginable. The following points illustrate the possibilities of a brighter and healthier future shaped by gene editing.
                     </p>
-                   <img src=Info.png">
+                   <img src= "Info.png">
                 </div>
                 <div class="services-grid">
                     <div class="service-box">
