--- a/index.html
+++ b/index.html
@@ -166,6 +166,71 @@
                 </p>
             </div>
         </div>
-    </section>    
+    </section> 
+
+    <section class="crispr-challenges">
+        <div class="container">
+            <div class="grid-layout">
+                <div class="left-content">
+                    <h2 class="section-title">Current Limitations and Ethical Concerns</h2>
+                    <p>
+                        While revolutionary, CRISPR faces challenges:
+                    </p>
+                    <ul>
+                        <li><strong>Technical Barriers:</strong> Off-target effects, where unintended genes are edited, remain a concern for patient safety.</li>
+                        <li><strong>Ethical Dilemmas:</strong> Germline editing sparks debate about designer babies and societal implications of altering human genetics.</li>
+                        <li><strong>Accessibility:</strong> High costs and limited infrastructure in low-income regions could exacerbate healthcare disparities.</li>
+                    </ul>
+                </div>
+                <div class="right-image">
+                    <img src="path-to-image-1.jpg" alt="Illustration of CRISPR limitations">
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <section class="crispr-future">
+        <div class="container">
+            <h2 class="section-title center-left">CRISPR's Future Impact</h2>
+            <p class="subtitle">
+                CRISPR's potential extends beyond current applications:
+            </p>
+            <div class="future-layout">
+                <div class="text-content">
+                    <p>
+                        As we explore CRISPR technology further, its applications are expanding into areas that were once unimaginable. The following points illustrate the possibilities of a brighter and healthier future shaped by gene editing.
+                    </p>
+                </div>
+                <div class="services-grid">
+                    <div class="service-box">
+                        <h3>Expanded Scope</h3>
+                        <p>
+                            Research explores its use in treating muscular dystrophy, retinal disorders, and brain diseases.
+                        </p>
+                    </div>
+                    <div class="service-box">
+                        <h3>Improved Delivery</h3>
+                        <p>
+                            Technologies like lipid nanoparticles are refining how CRISPR is administered, reducing invasiveness and increasing efficacy.
+                        </p>
+                    </div>
+                    <div class="service-box">
+                        <h3>Precision Medicine</h3>
+                        <p>
+                            Personalized CRISPR therapies could tailor treatments to individual genetic profiles, marking a new era in medicine.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <section class="future-summary-section">
+        <div class="container">
+            <p class="future-summary">
+                CRISPR represents a paradigm shift in human health, enabling breakthroughs once thought impossible. By addressing genetic disorders, combating infectious diseases, and pioneering personalized medicine, it challenges traditional medical approaches and fosters a future of unprecedented possibilities. As technical and ethical challenges are resolved, CRISPR is poised to redefine the boundaries of healthcare.
+            </p>
+        </div>
+    </section>       
     </body>
 </html>
