--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="container">
             <div class="grid-layout">
                 <div class="left-content">
-                    <h2 class="section-title">Current Limitations and Ethical Concerns</h2>
+                    <h2 class="limitation-ethical">Current Limitations and Ethical Concerns</h2>
                     <p>
                         While revolutionary, CRISPR faces challenges:
                     </p>
@@ -191,7 +191,7 @@
     
     <section class="crispr-future">
         <div class="container">
-            <h2 class="section-title center-left">CRISPR's Future Impact</h2>
+            <h2 class="future impact">CRISPR's Future Impact</h2>
             <p class="subtitle">
                 CRISPR's potential extends beyond current applications:
             </p>
