--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     
     <section class="crispr-future">
         <div class="container">
-            <h2 class="future impact">CRISPR's Future Impact</h2>
+            <h2 class="limitation-ethical center-left">CRISPR's Future Impact</h2>
             <p class="subtitle">
                 CRISPR's potential extends beyond current applications:
             </p>
