--- a/index.html
+++ b/index.html
@@ -192,16 +192,14 @@
     
     <section class="crispr-future">
         <div class="container">
-            <h2 class="limitation-ethical center-left">CRISPR's Future Impact</h2>
-            <p class="subtitle">
-                CRISPR's potential extends beyond current applications:
-            </p>
             <div class="future-layout">
+                <!-- Left Side -->
                 <div class="text-content">
-                    <p>
-                        As we explore CRISPR technology further, its applications are expanding into areas that were once unimaginable. The following points illustrate the possibilities of a brighter and healthier future shaped by gene editing.
-                    </p>
+                    <h2 class="limitation-ethical">CRISPR's Future Impact</h2>
+                    <p class="subtitle">CRISPR's potential extends beyond current applications:</p>
                 </div>
+    
+                <!-- Right Side -->
                 <div class="services-grid">
                     <div class="service-box">
                         <h3>Expanded Scope</h3>
