--- a/index.html
+++ b/index.html
@@ -226,10 +226,12 @@
     
     <section class="future-summary-section">
         <div class="container">
-            <p class="future-summary">
-                CRISPR represents a paradigm shift in human health, enabling breakthroughs once thought impossible. By addressing genetic disorders, combating infectious diseases, and pioneering personalized medicine, it challenges traditional medical approaches and fosters a future of unprecedented possibilities. As technical and ethical challenges are resolved, CRISPR is poised to redefine the boundaries of healthcare.
-            </p>
+            <div class="future-summary-box">
+                <p class="future-summary">
+                    CRISPR represents a paradigm shift in human health, enabling breakthroughs once thought impossible. By addressing genetic disorders, combating infectious diseases, and pioneering personalized medicine, it challenges traditional medical approaches and fosters a future of unprecedented possibilities. As technical and ethical challenges are resolved, CRISPR is poised to redefine the boundaries of healthcare.
+                </p>
+            </div>
         </div>
-    </section>       
+    </section>     
     </body>
 </html>
