--- a/index.html
+++ b/index.html
@@ -169,22 +169,33 @@
         </div>
     </section> 
 
-    <section class="crispr-challenges">
-        <div class="container">
-            <div class="grid-layout">
-                <div class="left-content">
-                    <h2 class="limitation-ethical">Current Limitations and Ethical Concerns</h2>
-                    <p>
-                        While revolutionary, CRISPR faces challenges:
-                    </p>
-                    <ul>
-                        <li><strong>Technical Barriers:</strong> Off-target effects, where unintended genes are edited, remain a concern for patient safety.</li>
-                        <li><strong>Ethical Dilemmas:</strong> Germline editing sparks debate about designer babies and societal implications of altering human genetics.</li>
-                        <li><strong>Accessibility:</strong> High costs and limited infrastructure in low-income regions could exacerbate healthcare disparities.</li>
-                    </ul>
+<section class="crispr-limitations">
+        <div class="page-entirety">
+            <div class="header-container">
+                <h3 id="limitations-title">Current Limitations and Ethical Concerns</h1>
+            </div>
+            <div class="description-container">
+                <p id="limitations-description">While revolutionary, CRISPR faces challenges:</p>
+            </div>
+            <div class="card1-container">
+                <img src="technical-barriers.png"/>
+                <div class="card1-content">
+                    <h4>TECHNICAL BARRIERS</h4>
+                    <p>Off-target effects, where unintended genes are edited, remain a concern for patient safety.</p>
                 </div>
-                <div class="right-image">
-                    <img src="path-to-image-1.jpg" alt="Illustration of CRISPR limitations">
+            </div>
+            <div class="card2-container">
+                <img src="ethical-dillemas.png"/>
+                <div class="card2-content">
+                    <h4>ETHICAL DILEMMAS</h4>
+                    <p>Germline editing sparks debate about designer babies and societal implications of altering human genetics.</p>
+                </div>
+            </div>
+            <div class="card3-container">
+                <img src="accessibility.png"/>
+                <div class="card3-content">
+                    <h4>ACCESSIBILITY</h4>
+                    <p>High costs and limited infrastructure in low-income regions could exacerbate healthcare disparities.</p>
                 </div>
             </div>
         </div>
@@ -193,10 +204,12 @@
     <section class="crispr-future">
         <div class="container">
             <div class="future-layout">
+                
                 <div class="text-content">
                     <h2 class="limitation-ethical">CRISPR's Future Impact</h2>
                     <p class="subtitle">CRISPR's potential extends beyond current applications:</p>
                 </div>
+                
                 <div class="services-grid">
                     <div class="service-box">
                         <h3>Expanded Scope</h3>
