--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@
             </div>
         </div>
     </section>
-    
+        
+     <!-- Home Section -->
     <section id="summary" section class="future-summary-section">
         <div class="container">
             <div class="future-summary-box">
