--- a/index.html
+++ b/index.html
@@ -253,8 +253,7 @@
         </div>
     </section>
         
-     <!-- Home Section -->
-    <section id="summary" section class="future-summary-section">
+    <section class="future-summary-section">
         <div class="container">
             <div class="future-summary-box">
                 <p class="future-summary">
