--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </div>
     </section> 
 
-<section id="applications" section class="crispr-applications">
+<section class="crispr-applications">
         <div class="page-entirety">
             <div class="header-container">
                 <h3 id="limitations-title">Current Limitations and Ethical Concerns</h1>
