--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <span>a.</span> Treating Genetic Disorders
                 </h3>
                 <div class="application-content">
-                    <p>CRISPR has shown immense promise in correcting genetic defects. For example:</p>
+                    <br><p>CRISPR has shown immense promise in correcting genetic defects. For example:</p></br>
                     <ul>
                         <li>
                             <strong>Sickle Cell Anemia:</strong> CRISPR is used to reactivate fetal hemoglobin production, alleviating disease symptoms.
