--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <span>a.</span> Treating Genetic Disorders
                 </h3>
                 <div class="application-content">
-                    <br><p>CRISPR has shown immense promise in correcting genetic defects. For example:</p></br>
+                    <p>CRISPR has shown immense promise in correcting genetic defects. For example:</p>
                     <ul>
                         <li>
                             <strong>Sickle Cell Anemia:</strong> CRISPR is used to reactivate fetal hemoglobin production, alleviating disease symptoms.
@@ -185,7 +185,7 @@
         </div>
     </section> 
 
-<section class="crispr-applications">
+    <section class="crispr-applications">
         <div class="page-entirety">
             <div class="header-container">
                 <h3 id="limitations-title">Current Limitations and Ethical Concerns</h1>
