--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <section class="crispr-applications">
         <div class="page-entirety">
             <div class="header-container">
-                <h3 id="limitations-title">Current Limitations and Ethical Concerns</h1>
+                <br><h3 id="limitations-title">Current Limitations and Ethical Concerns</h1></br>
             </div>
             <div class="description-container">
                 <p id="limitations-description">While revolutionary, CRISPR faces challenges:</p>
