--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <a href="#about">About</a>
             <a href="#science">Science</a>
             <a href="#timeline">Timeline</a>
+            <a href="#application">Application</a>
             <a href="#future">Future</a
         </nav>
           <!-- Home Section -->
@@ -185,7 +186,8 @@
         </div>
     </section> 
 
-    <section class="crispr-applications">
+         <!-- The Science Behind CRISPR --> id="science"
+    <section id="science" class="crispr-applications">
         <div class="page-entirety">
             <div class="header-container">
                 <br><h3 id="limitations-title">Current Limitations and Ethical Concerns</h1></br>
