--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         </div>
     </section> 
 
-         <!-- The Science Behind CRISPR --> id="science"
+         <!-- Application  --> 
     <section id="science" class="crispr-applications">
         <div class="page-entirety">
             <div class="header-container">
