--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
         </div>
     </section> 
 
-         <!-- Application  --> 
-    <section id="science" class="crispr-applications">
+         <!-- Application --> 
+    <section id="application" class="crispr-applications">
         <div class="page-entirety">
             <div class="header-container">
                 <br><h3 id="limitations-title">Current Limitations and Ethical Concerns</h1></br>
