--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <a href="#timeline">Timeline</a>
             <a href="#application">Application</a>
             <a href="#future">Future</a
+            <a href="#summary">Summary</a
         </nav>
           <!-- Home Section -->
     <section id="home" class="content-section">
@@ -252,8 +253,9 @@
             </div>
         </div>
     </section>
-        
-    <section class="future-summary-section">
+
+        <  <!-- Summary --> 
+    <section section id="summary" class="future-summary-section">
         <div class="container">
             <div class="future-summary-box">
                 <p class="future-summary">
