--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             <a href="#timeline">Timeline</a>
             <a href="#application">Application</a>
             <a href="#future">Future</a
-            <a href="#summary">Summary</a
         </nav>
           <!-- Home Section -->
     <section id="home" class="content-section">
@@ -254,8 +253,8 @@
         </div>
     </section>
 
-        <  <!-- Summary --> 
-    <section section id="summary" class="future-summary-section">
+        <!-- Summary --> 
+    <section id="summary" class="future-summary-section">
         <div class="container">
             <div class="future-summary-box">
                 <p class="future-summary">
