--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <a href="#timeline">Timeline</a>
             <a href="#application">Application</a>
             <a href="#future">Future</a
+            <a href="#summary">Summary</a
+                                        
         </nav>
           <!-- Home Section -->
     <section id="home" class="content-section">
