--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             <a href="#timeline">Timeline</a>
             <a href="#application">Application</a>
             <a href="#future">Future</a
-            <a href="#summary">Summary</a
                                         
         </nav>
           <!-- Home Section -->
@@ -254,9 +253,8 @@
             </div>
         </div>
     </section>
-
-        <!-- Summary --> 
-    <section id="summary" class="future-summary-section">
+ 
+    <section class="future-summary-section">
         <div class="container">
             <div class="future-summary-box">
                 <p class="future-summary">
