--- a/julia.html
+++ b/julia.html
@@ -52,7 +52,7 @@
             <div class="container">
                 <div class="box">
                     <img src=1.png alt="image">
-                        <div class="boxt"><b>DNA Modification in Living Organisms: </b> CCRISPR allows scientists to make precise changes to the DNA of living organisms, unlocking new possibilities in genetics and biotechnology </div>
+                        <div class="box"><b>DNA Modification in Living Organisms: </b> CCRISPR allows scientists to make precise changes to the DNA of living organisms, unlocking new possibilities in genetics and biotechnology </div>
                 <div class="box">
                     <img src=2.png alt="image">
                         <div class="box"> <b> How It Works: </b>When bacteria are infected by viruses, they capture small fragments of the virus's DNA and store them in their own genetic code in a unique pattern called CRISPR arrays.</div>
