--- a/index.html
+++ b/index.html
@@ -50,12 +50,22 @@
                 The Science Behind the Breakthrough
             </p>
                 <div class="container">
-                    <div class="box"><b>DNA Modification in Living Organisms: </b> CRISPR allows scientists to make precise changes to the DNA of living organisms, unlocking new possibilities in genetics and biotechnology.</div>
-                    <div class="box"><b> How It Works: </b>When bacteria are infected by viruses, they capture small fragments of the virus's DNA and store them in their own genetic code in a unique pattern called CRISPR arrays.</div>
-                    <div class="box"><b> Immune Memory: </b> These CRISPR arrays act as a biological "memory bank," allowing the bacteria to recognize viruses (or closely related ones) if they attack again in the future.</div>
-                    <div class="box"><b>Defensive Mechanism: </b> When the virus reappears, the bacteria generate RNA segments from the CRISPR arrays that target and bind to specific sections of the virus’s DNA.
+                    <div class="box">
+                         <img src="1.png">
+                            <b>DNA Modification in Living Organisms: </b> CRISPR allows scientists to make precise changes to the DNA of living organisms, unlocking new possibilities in genetics and biotechnology.</div>
+                    <div class="box">
+                         <img src="2.png">
+                            <b> How It Works: </b>When bacteria are infected by viruses, they capture small fragments of the virus's DNA and store them in their own genetic code in a unique pattern called CRISPR arrays.</div>
+                    <div class="box">
+                         <img src="3.png">
+                            <b> Immune Memory: </b> These CRISPR arrays act as a biological "memory bank," allowing the bacteria to recognize viruses (or closely related ones) if they attack again in the future.</div>
+                    <div class="box">
+                         <img src="4.png">
+                            <b>Defensive Mechanism: </b> When the virus reappears, the bacteria generate RNA segments from the CRISPR arrays that target and bind to specific sections of the virus’s DNA.
                     </div>
-                    <div class="box"><b> DNA Cutting: </b> The bacteria then deploy an enzyme, like Cas9, to cut the viral DNA apart, effectively neutralizing the threat and preventing the virus from reproducing.
+                    <div class="box">
+                         <img src="5.png">
+                            <b> DNA Cutting: </b> The bacteria then deploy an enzyme, like Cas9, to cut the viral DNA apart, effectively neutralizing the threat and preventing the virus from reproducing.
                     </div>
                 </div>
         </div>
