--- a/index.html
+++ b/index.html
@@ -43,33 +43,41 @@
         </div>
     </section>
 
-         <!-- The Science Behind CRISPR -->
-    <section id="science" class="content-section">
-        <div class="The-science">
-            <p class="Title"> 
-                The Science Behind the Breakthrough
-            </p>
+          <!-- The Science Behind CRISPR -->
+         <section id="science" class="content-section">
+            <div class="the-science">
+                <p class="title"> 
+                    The Science Behind the Breakthrough
+                </p>
                 <div class="container">
                     <div class="box">
-                            <img src="1.png">
-                                <b>DNA Modification in Living Organisms: </b> CRISPR allows scientists to make precise changes to the DNA of living organisms, unlocking new possibilities in genetics and biotechnology.</div>
-                    <div class="box">
-                             <img src="2.png">
-                                <b> How It Works: </b>When bacteria are infected by viruses, they capture small fragments of the virus's DNA and store them in their own genetic code in a unique pattern called CRISPR arrays.</div>
-                    <div class="box">
-                             <img src="3.png">
-                                <b> Immune Memory: </b> These CRISPR arrays act as a biological "memory bank," allowing the bacteria to recognize viruses (or closely related ones) if they attack again in the future.</div>
-                    <div class="box">
-                             <img src="4.png">
-                                <b>Defensive Mechanism: </b> When the virus reappears, the bacteria generate RNA segments from the CRISPR arrays that target and bind to specific sections of the virus’s DNA.
+                        <img src="1.png" alt="DNA Modification">
+                        <b>DNA Modification in Living Organisms:</b> 
+                        CRISPR allows scientists to make precise changes to the DNA of living organisms, unlocking new possibilities in genetics and biotechnology.
                     </div>
                     <div class="box">
-                             <img src="5.png">
-                            <b> DNA Cutting: </b> The bacteria then deploy an enzyme, like Cas9, to cut the viral DNA apart, effectively neutralizing the threat and preventing the virus from reproducing. 
-                            </div>
+                        <img src="2.png" alt="How it Works">
+                        <b>How It Works:</b> 
+                        When bacteria are infected by viruses, they capture small fragments of the virus's DNA and store them in their own genetic code in a unique pattern called CRISPR arrays.
+                    </div>
+                    <div class="box">
+                        <img src="3.png" alt="Immune Memory">
+                        <b>Immune Memory:</b> 
+                        These CRISPR arrays act as a biological "memory bank," allowing the bacteria to recognize viruses (or closely related ones) if they attack again in the future.
+                    </div>
+                    <div class="box">
+                        <img src="4.png" alt="Defensive Mechanism">
+                        <b>Defensive Mechanism:</b> 
+                        When the virus reappears, the bacteria generate RNA segments from the CRISPR arrays that target and bind to specific sections of the virus’s DNA.
+                    </div>
+                    <div class="box">
+                        <img src="5.png" alt="DNA Cutting">
+                        <b>DNA Cutting:</b> 
+                        The bacteria then deploy an enzyme, like Cas9, to cut the viral DNA apart, effectively neutralizing the threat and preventing the virus from reproducing.
+                    </div>
                 </div>
-        </div>
-    </section>
+            </div>
+        </section>
 
         <!-- CRISPR Timeline -->
     <section id="timeline" class="content-section">
