--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <!-- The Science Behind CRISPR -->
          <section id="science" class="content-section">
             <div class="the-science">
+            <div class="The-science">
                 <p class="title"> 
                     The Science Behind the Breakthrough
                 </p>
