--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
     <!-- CRISPR's Future Impact -->
     <section id="future" section class="crispr-future">
         <div class="container">
+        <div class="text-with-background">
             <div class="future-layout">
                 
                 <div class="text-content">
