--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 <section id="future" class="crispr-future">
     <div class="future-layout">
         <div class="image-container">
-            <img src="6.png" alt="CRISPR Future Impact">
+            <img src="CRISPR FUTURE IMPACT.png" alt="CRISPR Future Impact">
         </div>
         
         <div class="text-content">
