--- a/index.html
+++ b/index.html
@@ -81,87 +81,16 @@
         </section>
 
         <!-- CRISPR Timeline -->
-    <section id="timeline" class="content-section">
-        <div class="timeline-content">
-            <h2 class="timeline-title">
-                CRISPR Timeline
-            </h2>
-            <h3 class="Year">1987-2021</h3>
-        </div>            
-           <div class="timeline-container">
-        <div class="timeline">
-            <div class="event">
-                <div class="circle"></div>
-                <div class="content">
-                    <h3>1987</h3>
-                    <p>First discovery of clustered Regularly Interspaced Short Palindromic Repeats (CRISPR) in E. coli</p>
-                </div>
-            </div>
-            <div class="event">
-                <div class="circle"></div>
-                <div class="content">
-                    <h3>1993</h3>
-                    <p>Similar DNA fragments were found in Haloarcula and Haloferax archaea</p>
-                </div>
-            </div>
-            <div class="event">
-                <div class="circle"></div>
-                <div class="content">
-                    <h3>2000</h3>
-                    <p>The identification of homologous CRISPR fragments in twenty microbial species</p>
-                </div>
-            </div>
-            <div class="event">
-                <div class="circle"></div>
-                <div class="content">
-                    <h3>2005</h3>
-                    <p>The discovery of broader existence of CRISPR foreign viral DNA in CRISPR spacers</p>
-                </div>
-            </div>
-            <div class="event">
-                <div class="circle"></div>
-                <div class="content">
-                    <h3>2007</h3>
-                    <p>The functions of CRISPR were evidenced in lab</p>
-                </div>
-            </div>
-            <div class="event">
-                <div class="circle"></div>
-                <div class="content">
-                    <h3>2013</h3>
-                    <p>CRISPR was engineered as a gene-editing tool</p>
-                </div>
-            </div>
-            <div class="event">
-                <div class="circle"></div>
-                <div class="content">
-                    <h3>2016</h3>
-                    <p>The first application of CRISPR/Cas9 in clinical treatment</p>
-                </div>
-            </div>
-            <div class="event">
-                <div class="circle"></div>
-                <div class="content">
-                    <h3>2019</h3>
-                    <p>CRISPR/Cas9-based HIV1 infection treatment was reported</p>
-                </div>
-            </div>
-            <div class="event">
-                <div class="circle"></div>
-                <div class="content">
-                    <h3>2020</h3>
-                    <p>Emmanuelle Charpentier and Jennifer Doudna were awarded the Nobel Prize, and cancer clinical therapy by Cas9-edited T-cells was reported</p>
-                </div>
-            </div>
-            <div class="event">
-                <div class="circle"></div>
-                <div class="content">
-                    <h3>2021</h3>
-                    <p>The clinical treatment of SCD and B-Thalassemia was reported</p>
-                </div>
-            </div>
-        </div>
+<section id="timeline" class="content-section">
+    <div class="timeline-content">
+        <h2 class="timeline-title">CRISPR Timeline</h2>
+        <h3 class="Year">1987-2021</h3>
     </div>
+    <div class="photo-container-crspr">
+        <img src="CRISPR-Timeline-3.png" alt="Timeline">
+    </div>
+</section>
+
     <section class="crispr-applications">
         <div class="container">
             <h2>
@@ -277,10 +206,16 @@
         <div class="container">
             <div class="future-summary-box">
                 <p class="future-summary">
-                    CRISPR represents a paradigm shift in human health, enabling breakthroughs once thought impossible. By addressing genetic disorders, combating infectious diseases, and pioneering personalized medicine, it challenges traditional medical approaches and fosters a future of unprecedented possibilities. As technical and ethical challenges are resolved, CRISPR is poised to redefine the boundaries of healthcare.
+                    <b> CRISPR</b> represents a paradigm shift in human health, enabling breakthroughs once thought impossible. By addressing genetic disorders, combating infectious diseases, and pioneering personalized medicine, it challenges traditional medical approaches and fosters a future of unprecedented possibilities. As technical and ethical challenges are resolved, CRISPR is poised to redefine the boundaries of healthcare.
                 </p>
             </div>
         </div>
-    </section>     
+    </section>    
+    <footer>
+            <div class="footer-info">
+                <p>&copy; 2024 Group D. All Rights Reserved.</p>
+                <p> <i> How CRISPR Technology Helps the Future of Human Health</i></p>
+            </div>
+        </div> 
     </body>
 </html>
